# old

chatd/: CMakeLists.txt  Jamroot  admin_chatd.cpp  admin_chatd.h  alphabet.h  answer.cpp  answer.h  archive.cpp  archive.h  audio.cpp  audio.h  audio_tags.cpp  audio_tags.h  avatar.cpp  avatar.h  blizzard.cpp  blizzard.h  chatd.cfg  chatd.cpp  chatd.doc  chatd_etc  configure.h  context.h  domain.cpp  domain.h  dumper.cpp  dumper.h  error.cpp  error.h  friendsoft.ru  front.h  image.cpp  image.h  invite.cpp  invite.h  link.cpp  link.h  message.cpp  message.h  object.cpp  (+20 more)
include/: http_server.cpp  response.cpp  response.h  serialization.cpp
lottery/: Jamroot  configure.h  install.sh  lotteryd  lotteryd.cfg  lotteryd.cpp  service.cpp  service.h
